--- a/index.html
+++ b/index.html
@@ -4,17 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Roboto:wght@300;400&display=swap" rel="stylesheet">
     <title>Library</title>
 </head>
 <body>
     <header class="header">
         <div class="header-items container">
+            
             <img class="logo" src="images/logo.png" alt="logo">
-
+        
             <nav class="nav">
                 <ul class="menu">
                  <li>Home</li>
                  <li>My List</li>
+                 <li>About</li>
                 </ul> 
 
                 <div class="profile-img">
